--- a/package.json
+++ b/package.json
@@ -21,6 +21,13 @@
     "normalize.css": "7.0.0"
   },
   "devDependencies": {
-    "gulp": "3.9.1"
+    "autoprefixer": "^9.8.0",
+    "browser-sync": "^2.26.7",
+    "gulp": "^3.9.1",
+    "gulp-postcss": "^8.0.0",
+    "gulp-watch": "^5.0.1",
+    "postcss-import": "^12.0.1",
+    "postcss-nested": "^4.2.1",
+    "postcss-simple-vars": "^5.0.2"
   }
 }
